Clean up
Signed-off-by: shams <shamsazeem20@gmail.com>